--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>HELLO!!!</title>
 </head>
 <body>
-<image src="https://drive.google.com/open?id=0B8ZJn0X_MbNXeTFnVmdRbUREdWs"></image>
+<image src="https://drive.google.com/file/d/0B8ZJn0X_MbNXeTFnVmdRbUREdWs/view?usp=sharing"></image>
 </body>
 </html>
