--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HELLO!!!</title>
+    <title>FOOD FOR LIFE IN KHARKIV CITY</title>
 </head>
 <body>
 <image src="/images/FFL_BANNER_1.jpg"></image>
