--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>FFL IN KH</title>
 </head>
 <body>
-<image src="/images/FFL_BANNER_1.jpg"></image>
+<image src="/images/banner.jpg"></image>
 </body>
 </html>
