--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Food-For-Life</title>
-    <style>
-        [data-ng-cloak] {
-            display: none !important;
-        }
-    </style>
-</head>
-<body class="container" data-ng-app="app" data-ng-strict-di>
-<div data-ng-controller="HomeController as vm" data-ng-cloak>
-    <div id="main">
-        <div class="container-fluid root-cont">
-            <div class="row">
-                <div class="col-md-12 banner">
-                    <image src="/banner.png" style="width: 100%; height: 250px"></image>
-                </div>
-            </div>
-            <section ui-view></section>
-        </div>
-    </div>
-</div>
-<script src="bundle.js"></script>
-</body>
+  <meta charset="utf-8">
+  <title>Food-For-Life</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link href="styles.7c25a02a137df81c1ced.bundle.css" rel="stylesheet"/></head>
+<body class="container">
+  <app-root>Loading...</app-root>
+<script type="text/javascript" src="inline.1e3c46a18b6db9199aba.bundle.js"></script><script type="text/javascript" src="polyfills.55779feda9666b14cfb7.bundle.js"></script><script type="text/javascript" src="vendor.e00731882546b77c4770.bundle.js"></script><script type="text/javascript" src="main.a3eb6d200a036d002986.bundle.js"></script></body>
 </html>
