--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Food-For-Life</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.7c25a02a137df81c1ced.bundle.css" rel="stylesheet"/></head>
-<body class="container">
-  <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.1e3c46a18b6db9199aba.bundle.js"></script><script type="text/javascript" src="polyfills.55779feda9666b14cfb7.bundle.js"></script><script type="text/javascript" src="vendor.e00731882546b77c4770.bundle.js"></script><script type="text/javascript" src="main.a3eb6d200a036d002986.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>FoodForLife</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.7d3786df94fd212f7d14.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.749bb164f5230cb69247.bundle.js"></script><script type="text/javascript" src="polyfills.f20484b2fa4642e0dca8.bundle.js"></script><script type="text/javascript" src="main.01cc96e7ea021de35569.bundle.js"></script></body></html>
